Se anadio amazon_aws_s3 y division de setting a proponer

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+boto==2.38.0
 Django==1.8.3
 django-ckeditor==4.5.1
 django-extensions==1.5.5
-easy-thumbnails==2.2
+django-storages==1.1.8
 ipdb==0.8.1
 ipython==3.2.1
 Pillow==2.9.0
