--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ boto==2.38.0
 Django==1.8.3
 django-ckeditor==4.5.1
 django-extensions==1.5.5
+django-redis-cache==1.6.0
 django-storages==1.1.8
+hiredis==0.2.0
 ipdb==0.8.1
 ipython==3.2.1
 Pillow==2.9.0
 psycopg2==2.6.1
+redis==2.10.3
 six==1.9.0
 sorl-thumbnail==12.3
 wheel==0.24.0
